@@ -15,14 +15,14 @@ from qtpy import QtCore, QtWidgets, QtGui
 
 logger = logging.getLogger("fastflix")
 
-__all__ = ["Worker"]
+__all__ = ["CommandRunner"]
 
 white_detect = re.compile(r"^\s+")
 
 
-class Worker(QtCore.QProcess):
+class CommandRunner(QtCore.QThread):
     def __init__(self, parent, command_list, work_dir):
-        super(Worker, self).__init__(parent)
+        super().__init__(parent)
         self.tempdir = tempfile.TemporaryDirectory(prefix="temp_", dir=work_dir)
         self.app = parent
         self.command_list = command_list
@@ -90,15 +90,24 @@ class Worker(QtCore.QProcess):
                     line_wait = False
 
         elif command_type == "ffmpeg":
-            for line in self.process.stdout:
+            last_write = 0
+            for i, line in enumerate(self.process.stdout):
                 if self.killed:
                     logger.info(line.rstrip())
                     break
                 if not white_detect.match(line):
                     if "Skipping NAL unit" in line:
+                        last_write -= 1
                         continue
-                    logger.info(line.rstrip())
-                    if line.strip().startswith(("frame", "encoded")):
+
+                    line = line.strip()
+                    if line.startswith("frame"):
+                        if last_write + 50 < i:
+                            last_write = i
+                            logger.info(line.rstrip())
+                    else:
+                        logger.info(line.rstrip())
+                    if line.startswith(("frame", "encoded")):
                         self.app.log_label_update(line.strip())
 
         return_code = self.process.poll()
